@startuml
interface com.itheima.Mapper.DeptMapper {
~ List<Dept> list()
~ void deleteById(Integer)
~ void insert(Dept)
~ Dept queryById(Integer)
~ void modifyById(Dept)
}
class com.itheima.utils.AliOSSUtils {
- String endpoint
- String accessKeyId
- String accessKeySecret
- String bucketName
+ String upload(MultipartFile)
}
class com.itheima.Service.impl.EmpServiceImpl {
~ EmpMapper empmapper
+ PageBean page(Integer,Integer,String,Short,LocalDate,LocalDate)
+ void deleteByIds(List<Integer>)
+ void addEmp(Emp)
+ Emp getById(Integer)
+ void modifyById(Emp)
}
class com.itheima.Pojo.PageBean {
- long total
- List rows
}
class com.itheima.SpringbootTliasApplication {
+ {static} void main(String[])
}
class com.itheima.Controller.UploadController {
~ AliOSSUtils aliOSSUtils
+ Result upload(MultipartFile)
}
class com.itheima.SpringbootTliasApplicationTests {
~ void contextLoads()
}
class com.itheima.Service.impl.DeptServiceImpl {
- DeptMapper deptMapper
+ List<Dept> list()
+ void delete(Integer)
+ void add(Dept)
+ Dept queryById(Integer)
+ void modifyById(Dept)
}
class com.itheima.Demo {
+ {static} void main(String[])
}
class com.itheima.Controller.EmpController {
- EmpService empService
+ Result page(Integer,Integer,String,Short,LocalDate,LocalDate)
+ Result deleteByIds(List<Integer>)
+ Result addEmp(Emp)
+ Result getById(Integer)
+ Result modifyById(Emp)
}
class com.itheima.Controller.DeptController {
- DeptService deptService
+ Result list()
+ Result delete(Integer)
+ Result add(Dept)
+ Result queryById(Integer)
+ Result modifyById(Dept)
}
class com.itheima.Pojo.Dept {
- Integer id
- String name
- LocalDateTime createTime
- LocalDateTime updateTime
}
interface com.itheima.Service.DeptService {
~ List<Dept> list()
~ void delete(Integer)
~ void add(Dept)
~ Dept queryById(Integer)
~ void modifyById(Dept)
}
interface com.itheima.Service.EmpService {
~ PageBean page(Integer,Integer,String,Short,LocalDate,LocalDate)
~ void deleteByIds(List<Integer>)
~ void addEmp(Emp)
~ Emp getById(Integer)
~ void modifyById(Emp)
}
class com.itheima.Pojo.Result {
- Integer code
- String msg
- Object data
+ {static} Result success()
+ {static} Result success(Object)
+ {static} Result error(String)
}
class com.itheima.Pojo.Emp {
- Integer id
- String username
- String password
- String name
- Short gender
- String image
- Short job
- LocalDate entrydate
- Integer deptId
- LocalDateTime createTime
- LocalDateTime updateTime
}
interface com.itheima.Mapper.EmpMapper {
+ List<Emp> list(String,Short,LocalDate,LocalDate)
~ void deleteByIds(List<Integer>)
~ void addEmp(Emp)
~ Emp getById(Integer)
~ void modifyById(Emp)
}


com.itheima.Service.EmpService <|.. com.itheima.Service.impl.EmpServiceImpl
com.itheima.Service.DeptService <|.. com.itheima.Service.impl.DeptServiceImpl
@enduml